@@ -303,6 +303,16 @@ If set, force a rebuild of all resources (i.e. all files generated by
 resource creator plugins), even if the resource files already exist.
 
 
+### SRC_REGEXP
+
+Modify source file data before it is processed by plugins. Use with
+care!
+
+Example (fix links in Markdown source):
+
+    SRC_REGEXP=s/\(doc\/([a-zA-Z0-9_]+).md\)/\(\L$1\E.html\)/g
+
+
 Preset Variables
 ----------------
 
